src/tests/testfiles/binary-operators/types-34.txt
testfiles/binary-operators/types-34.c:5:7: error: invalid operands to comparison '==' (have 'float' and 'char *')
a == b;
  ^
